ParticleCounter: use Integer.valueOf() rather than new Integer()